[package]
name = "test_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
hmac = "0.12.1"
serde_json = "1.0"
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
downcast-rs = "1.2"
chrono = "0.4.24"
